K8S/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: counter-app-db
spec: {}
status: {}
