K8S/app/deployment-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: counter-app-db
  labels:
    app: contador-visitantes
spec:
  selector:
    matchLabels:
      app: contador-visitantes
  replicas: 1
  template:
    metadata:
      labels:
        app: contador-visitantes
    spec:
      containers:
      - name: contador-visitantes
        image: carlosfeufernandez/contador-visitantes:v1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000
