K8S/app/services-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: counter-app-db
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
