K8S/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: counterapp-ingress
  namespace: counter-app-db
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: 34-79-26-124.nip.io
    http:
      paths:
      - path: '/'
        pathType: Prefix
        backend:
          service:
            name: counterapp-service
            port:
              number: 5000
